# auto_adb_wl_server

./: .env.example  Cargo.toml  README.md  build.rs
src/: adb.rs  lib.rs  lnd.rs  main.rs  mdns.rs  scrcpy.rs
tests/: mdns.rs
